[package]
name = "funnssa"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = { version = "0.26.3", features = ["derive"] }

[features]
default = ["arch-common", "arch-native"]
arch-common = ["arch-x86_64", "arch-aarch64"]
arch-x86_64 = []
arch-aarch64 = []
arch-urcl = []

arch-native = []
arch-all = ["arch-x86_64", "arch-aarch64", "arch-urcl"]
